refactor!: audit the codebase, fix backup safety bugs, and speed up backups (#24)
* refactor!: audit the codebase, fix backup safety bugs, and speed up backups

An audit of every file found data-safety bugs, slow paths, and a lot of code
that defended against problems a single-player backup tool does not have.

- Fix cleanup, delete, cancel, settings, runtime, and Git bugs that could lose
  a copy, hide a copy, skip the game's final save, or report a false success.
  End-to-end tests with real Git and real ZIP files reproduce each one.
- Make a Git backup start a few git processes instead of one for each file,
  write each ZIP archive one time, copy the world with parallel workers, and
  batch deletes and the start-up catalog rebuild.
- Remove duplicate helpers, dead code, test-only hooks in production classes,
  and tests that pinned old implementation details. Move the runtime logic
  into src/main, where it has tests.

BREAKING CHANGE: WorldArchive no longer reads settings files from 0.1.0 or the
shared Git repository of 0.1.0. Import that repository one time with
Import > Repository.

* fix(cleanup): keep a ZIP copy listed when its delete fails

A failed ZIP delete counted as done when Files.exists returned false,
which it also does when the drive is away. A failed unmark also skipped
the catalog write that lists the kept copies again.

Keep every copy whose delete fails, and write the catalog even when the
deleted-backup list cannot be changed.

* chore(release): make this release 0.4.0 and rename the old 0.4.0 to 0.3.9

The old 0.4.0 moved to Minecraft 26.3 and fixed bugs. This release
rewrites most of the engine and breaks old data, so it takes the 0.4.0
number.

Date the 0.4.0 changelog section, rename the old section to 0.3.9, and
make the comments that describe the old release say 0.3.9.